disable blinking cursor

--- a/modules/configs/kitty/kitty.conf
+++ b/modules/configs/kitty/kitty.conf
@@ -224,7 +224,7 @@ disable_ligatures never
 
 #: The thickness of the underline cursor (in pts).
 
-# cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
