use lighter color in kitty theme

--- a/modules/configs/kitty/melange.conf
+++ b/modules/configs/kitty/melange.conf
@@ -7,11 +7,11 @@ foreground  #ece1d7
 
 cursor                #867462
 
-selection_foreground  #867462
+selection_foreground  #c1a78e
 selection_background  #403A36
 
 color0  #292522
-color8  #867462
+color8  #c1a78e
 
 # red
 color9                #D47766
@@ -44,6 +44,6 @@ color14                #89B3B6
 color6               #7B9695
 
 # light gray
-color7                #867462
+color7                #c1a78e
 # dark gray
 color15               #403A36
