--- a/modules/configs/hyprland.conf
+++ b/modules/configs/hyprland.conf
@@ -215,7 +215,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, G, exec, uwsm app -- firefox
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
@@ -249,8 +249,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, P, togglespecialworkspace, magic
+bind = $mainMod SHIFT, P, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -280,6 +280,9 @@ bind = $mainMod shift, V, togglefloating
 
 # Lock the screen
 bind = $mainMod CTRL, L, exec, hyprlock
+
+# screenshot
+bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
