--- a/modules/configs/hyprland.conf
+++ b/modules/configs/hyprland.conf
@@ -15,7 +15,12 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highrr,auto,auto
+#monitor=,highrr,auto,auto
+monitor=,1920x1080,auto,1,bitdepth,8
+monitor=,preferred,auto,1,mirror,eDP-1,bitdepth,8
+xwayland {
+	force_zero_scaling = true
+}
 
 
 ###################
