--- a/modules/configs/hyprland.conf
+++ b/modules/configs/hyprland.conf
@@ -216,6 +216,7 @@ bind = $mainMod, G, exec, uwsm app -- firefox
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
