Fix hyprlock script

--- a/home/configs/hyprland.conf
+++ b/home/configs/hyprland.conf
@@ -58,7 +58,6 @@ env = HYPRCURSOR_SIZE,24
 #####################
 ### LOOK AND FEEL ###
 #####################
-#lloy.xyz
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
@@ -296,6 +295,8 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+windowrule = float, class:^(org.prismlauncher.PrismLauncher)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
