add sway notification center

--- a/home/configs/hyprland.conf
+++ b/home/configs/hyprland.conf
@@ -283,6 +283,9 @@ bind = $mainMod CTRL, L, exec, hyprlock
 # screenshot
 bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
 
+# toggle notification center
+bind = $mainMod, N, exec, swaync-client -t
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
