update hyprland config for multiple monitors

--- a/home/configs/waybar/config.jsonc
+++ b/home/configs/waybar/config.jsonc
@@ -33,16 +33,17 @@
     },
     "hyprland/workspaces": {
       "disable-scroll": true,
-      "all-outputs": true,
+      "all-outputs": false,
       "warp-on-scroll": false,
       "format": "{icon}",
       "on-click": "activate",
       "format-icons": {
         "active": " ",
+        "unfocused": " ",
       },
       "sort-by-number": true,
       "persistent-workspaces": {
-        "*": 4, // 4 workspaces by default on every monitor
+        "DP-1": 4, // 4 workspaces by default on every monitor
       },
     },
     "clock": {
