--- a/home/configs/hyprland.conf
+++ b/home/configs/hyprland.conf
@@ -146,6 +146,28 @@ animations {
 # windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 # windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
+workspace = 1, monitor:$mon1, default:true
+workspace = 2, monitor:$mon1
+workspace = 3, monitor:$mon1
+workspace = 4, monitor:$mon1
+workspace = 5, monitor:$mon1
+workspace = 6, monitor:$mon1
+workspace = 7, monitor:$mon1
+workspace = 8, monitor:$mon1
+workspace = 9, monitor:$mon1
+workspace = 10, monitor:$mon1
+
+workspace = 11, monitor:$mon2, default:true
+workspace = 12, monitor:$mon2
+workspace = 13, monitor:$mon2
+workspace = 14, monitor:$mon2
+workspace = 15, monitor:$mon2
+workspace = 16, monitor:$mon2
+workspace = 17, monitor:$mon2
+workspace = 18, monitor:$mon2
+workspace = 19, monitor:$mon2
+workspace = 20, monitor:$mon2
+
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -224,16 +246,16 @@ bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mainMod, 1, workspace, r~1
+bind = $mainMod, 2, workspace, r~2
+bind = $mainMod, 3, workspace, r~3
+bind = $mainMod, 4, workspace, r~4
+bind = $mainMod, 5, workspace, r~5
+bind = $mainMod, 6, workspace, r~6
+bind = $mainMod, 7, workspace, r~7
+bind = $mainMod, 8, workspace, r~8
+bind = $mainMod, 9, workspace, r~9
+bind = $mainMod, 0, workspace, r~10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -285,6 +307,9 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
 
 # toggle notification center
 bind = $mainMod, N, exec, swaync-client -t
+
+# move window to other monitor
+bind = $mainMod, X, movewindow, mon:+1
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
