--- a/home/configs/hyprland.conf
+++ b/home/configs/hyprland.conf
@@ -258,16 +258,16 @@ bind = $mainMod, 9, workspace, r~9
 bind = $mainMod, 0, workspace, r~10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspace, r~1
+bind = $mainMod SHIFT, 2, movetoworkspace, r~2
+bind = $mainMod SHIFT, 3, movetoworkspace, r~3
+bind = $mainMod SHIFT, 4, movetoworkspace, r~4
+bind = $mainMod SHIFT, 5, movetoworkspace, r~5
+bind = $mainMod SHIFT, 6, movetoworkspace, r~6
+bind = $mainMod SHIFT, 7, movetoworkspace, r~7
+bind = $mainMod SHIFT, 8, movetoworkspace, r~8
+bind = $mainMod SHIFT, 9, movetoworkspace, r~9
+bind = $mainMod SHIFT, 0, movetoworkspace, r~10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, P, togglespecialworkspace, magic
