--- a/home/configs/hyprland.conf
+++ b/home/configs/hyprland.conf
@@ -9,6 +9,8 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+workspace = 1, monitor:$mon1, default:true
+workspace = 5, monitor:$mon2, default:true
 
 ################
 ### MONITORS ###
@@ -146,27 +148,20 @@ animations {
 # windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 # windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
-workspace = 1, monitor:$mon1, default:true
-workspace = 2, monitor:$mon1
-workspace = 3, monitor:$mon1
-workspace = 4, monitor:$mon1
-workspace = 5, monitor:$mon1
-workspace = 6, monitor:$mon1
-workspace = 7, monitor:$mon1
-workspace = 8, monitor:$mon1
-workspace = 9, monitor:$mon1
-workspace = 10, monitor:$mon1
+windowrule = pin, class:firefox, title:Picture-in-Picture
+windowrule = float, class:firefox, title:Picture-in-Picture
+windowrule = size 640 360, class:firefox, title:Picture-in-Picture
 
-workspace = 11, monitor:$mon2, default:true
-workspace = 12, monitor:$mon2
-workspace = 13, monitor:$mon2
-workspace = 14, monitor:$mon2
-workspace = 15, monitor:$mon2
-workspace = 16, monitor:$mon2
-workspace = 17, monitor:$mon2
-workspace = 18, monitor:$mon2
-workspace = 19, monitor:$mon2
-workspace = 20, monitor:$mon2
+# workspace = 11, monitor:$mon2, default:true
+# workspace = 12, monitor:$mon2
+# workspace = 13, monitor:$mon2
+# workspace = 14, monitor:$mon2
+# workspace = 15, monitor:$mon2
+# workspace = 16, monitor:$mon2
+# workspace = 17, monitor:$mon2
+# workspace = 18, monitor:$mon2
+# workspace = 19, monitor:$mon2
+# workspace = 20, monitor:$mon2
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -246,28 +241,28 @@ bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, r~1
-bind = $mainMod, 2, workspace, r~2
-bind = $mainMod, 3, workspace, r~3
-bind = $mainMod, 4, workspace, r~4
-bind = $mainMod, 5, workspace, r~5
-bind = $mainMod, 6, workspace, r~6
-bind = $mainMod, 7, workspace, r~7
-bind = $mainMod, 8, workspace, r~8
-bind = $mainMod, 9, workspace, r~9
-bind = $mainMod, 0, workspace, r~10
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, r~1
-bind = $mainMod SHIFT, 2, movetoworkspace, r~2
-bind = $mainMod SHIFT, 3, movetoworkspace, r~3
-bind = $mainMod SHIFT, 4, movetoworkspace, r~4
-bind = $mainMod SHIFT, 5, movetoworkspace, r~5
-bind = $mainMod SHIFT, 6, movetoworkspace, r~6
-bind = $mainMod SHIFT, 7, movetoworkspace, r~7
-bind = $mainMod SHIFT, 8, movetoworkspace, r~8
-bind = $mainMod SHIFT, 9, movetoworkspace, r~9
-bind = $mainMod SHIFT, 0, movetoworkspace, r~10
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, P, togglespecialworkspace, magic
