--- a/home/configs/kitty/kitty.conf
+++ b/home/configs/kitty/kitty.conf
@@ -24,7 +24,7 @@ font_family      JetBrains Mono NF
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 16.0
 
 #: Font size (in pts)
 
@@ -239,7 +239,7 @@ cursor_blink_interval 0
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 200000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -1584,13 +1584,13 @@ confirm_os_window_close 0
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
 #: kitty_mod.
 
-# clear_all_shortcuts no
+clear_all_shortcuts no
 
 #: Remove all shortcut definitions up to this point. Useful, for
 #: instance, to remove the default shortcuts.
@@ -1627,7 +1627,7 @@ confirm_os_window_close 0
 
 #: Copy to clipboard
 
-# map kitty_mod+c copy_to_clipboard
+map ctrl+shift+c copy_to_clipboard
 # map cmd+c       copy_to_clipboard
 
 #::  There is also a copy_or_interrupt action that can be optionally
@@ -1638,7 +1638,7 @@ confirm_os_window_close 0
 
 #: Paste from clipboard
 
-# map kitty_mod+v paste_from_clipboard
+map ctrl+shift+v paste_from_clipboard
 # map cmd+v       paste_from_clipboard
 
 #: Paste from selection
@@ -1683,12 +1683,12 @@ confirm_os_window_close 0
 
 #: Scroll page up
 
-# map kitty_mod+page_up scroll_page_up
+map kitty_mod+u scroll_page_up
 # map cmd+page_up       scroll_page_up
 
 #: Scroll page down
 
-# map kitty_mod+page_down scroll_page_down
+map kitty_mod+d scroll_page_down
 # map cmd+page_down       scroll_page_down
 
 #: Scroll to top
@@ -1698,12 +1698,12 @@ confirm_os_window_close 0
 
 #: Scroll to bottom
 
-# map kitty_mod+end scroll_end
+map kitty_mod+x scroll_end
 # map cmd+end       scroll_end
 
 #: Scroll to previous shell prompt
 
-# map kitty_mod+z scroll_to_prompt -1
+map ctrl+space>z scroll_to_prompt -1
 
 #::  Use a parameter of 0 for scroll_to_prompt to scroll to the last
 #::  jumped to or the last clicked position. Requires shell
@@ -1712,7 +1712,7 @@ confirm_os_window_close 0
 
 #: Scroll to next shell prompt
 
-# map kitty_mod+x scroll_to_prompt 1
+map ctrl+space>x scroll_to_prompt 1
 
 #: Browse scrollback buffer in pager
 
@@ -1761,7 +1761,11 @@ confirm_os_window_close 0
 
 #: New window
 
-# map kitty_mod+enter new_window
+enabled_layouts splits:split_axis=horizontal
+
+map ctrl+space>c launch --type=tab --cwd=current
+map ctrl+space>shift+5 launch --location=vsplit --cwd=current
+map ctrl+space>shift+2 launch --location=hsplit --cwd=current
 # map cmd+enter       new_window
 
 #::  You can open a new kitty window running an arbitrary program, for
@@ -1806,7 +1810,8 @@ confirm_os_window_close 0
 
 #: Next window
 
-# map kitty_mod+] next_window
+map ctrl+space>j next_window
+map ctrl+space>k previous_window
 
 #: Previous window
 
@@ -1942,7 +1947,15 @@ confirm_os_window_close 0
 #: the first tab, 2 the second tab and -1 being the previously active
 #: tab, and any number larger than the last tab being the last tab::
 
-#:     map ctrl+alt+1 goto_tab 1
+map ctrl+space>1 goto_tab 1
+map ctrl+space>2 goto_tab 2
+map ctrl+space>3 goto_tab 3
+map ctrl+space>4 goto_tab 4
+map ctrl+space>5 goto_tab 5
+map ctrl+space>6 goto_tab 6
+map ctrl+space>7 goto_tab 7
+map ctrl+space>8 goto_tab 8
+map ctrl+space>9 goto_tab 9
 #:     map ctrl+alt+2 goto_tab 2
 
 #: Just as with new_window above, you can also pass the name of
@@ -1974,7 +1987,7 @@ confirm_os_window_close 0
 #: Useful to temporarily "zoom" the active window by switching to the
 #: stack layout::
 
-#:     map ctrl+alt+z toggle_layout stack
+map ctrl+space>z toggle_layout stack
 #: }}}
 
 #: Font sizes {{{
@@ -2022,7 +2035,7 @@ confirm_os_window_close 0
 
 #: Open URL
 
-# map kitty_mod+e open_url_with_hints
+map ctrl+space>e open_url_with_hints
 
 #::  Open a currently visible URL using the keyboard. The program used
 #::  to open the URL is specified in open_url_with.
