--- a/home/configs/waybar/config.jsonc
+++ b/home/configs/waybar/config.jsonc
@@ -32,6 +32,7 @@
       "separate-outputs": true,
     },
     "hyprland/workspaces": {
+      "separate-outputs": true,
       "disable-scroll": true,
       "all-outputs": false,
       "warp-on-scroll": false,
@@ -39,11 +40,10 @@
       "on-click": "activate",
       "format-icons": {
         "active": " ",
-        "unfocused": " ",
       },
       "sort-by-number": true,
       "persistent-workspaces": {
-        "DP-1": 4, // 4 workspaces by default on every monitor
+        "*": 4, // 4 workspaces by default on every monitor
       },
     },
     "clock": {
