--- a/home/configs/starship.toml
+++ b/home/configs/starship.toml
@@ -4,6 +4,8 @@
 # Inserts a blank line between shell prompts
 add_newline = true
 
+scan_timeout = 100
+
 # Disable the package module, hiding it from the prompt completely
 [package]
 disabled = true
