update flakes and hyprland config

--- a/home/configs/hyprland.conf
+++ b/home/configs/hyprland.conf
@@ -148,9 +148,9 @@ animations {
 # windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 # windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
-windowrule = pin, class:firefox, title:Picture-in-Picture
-windowrule = float, class:firefox, title:Picture-in-Picture
-windowrule = size 640 360, class:firefox, title:Picture-in-Picture
+windowrule = match:class firefox, match:title Picture-in-Picture, pin on
+windowrule = float on, match:class firefox, match:title Picture-in-Picture
+windowrule = size 640 360, match:class firefox, match:title Picture-in-Picture
 
 # workspace = 11, monitor:$mon2, default:true
 # workspace = 12, monitor:$mon2
@@ -314,7 +314,7 @@ bind = $mainMod, X, movewindow, mon:+1
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
-windowrule = float, class:^(org.prismlauncher.PrismLauncher)$
+windowrule = float on, match:class org.prismlauncher.PrismLauncher
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
