--- a/home/configs/hyprland.conf
+++ b/home/configs/hyprland.conf
@@ -55,6 +55,9 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 
 #####################
