update hyprland conf

--- a/home/configs/hyprland.conf
+++ b/home/configs/hyprland.conf
@@ -9,8 +9,8 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-workspace = 1, monitor:$mon1, default:true
-workspace = 5, monitor:$mon2, default:true
+# workspace = 1, monitor:$mon1, default:true
+# workspace = 5, monitor:$mon2, default:true
 
 ################
 ### MONITORS ###
@@ -26,9 +26,9 @@ workspace = 5, monitor:$mon2, default:true
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = uwsm app -- kitty
-$fileManager = uwsm app -- dolphin
-$menu = uwsm app -- wofi --show drun
+$terminal = kitty
+$fileManager = dolphin
+$menu = wofi --show drun
 
 
 #################
@@ -222,12 +222,12 @@ device {
 $mainMod = Alt # Sets "Alt" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, $terminal
+bind = $mainMod, Return, exec, uwsm app -- $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, uwsum app -- $fileManager
 bind = $mainMod, G, exec, uwsm app -- firefox
-bind = $mainMod, D, exec, $menu
+bind = $mainMod, D, exec, uwsm app -- $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
@@ -289,17 +289,17 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Clipboard search with wofi
-bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, uwsm app -- cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod shift, V, togglefloating
 
 # Lock the screen
 bind = $mainMod CTRL, L, exec, hyprlock
 
 # screenshot
-bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
+bind = $mainMod SHIFT, S, exec, uwsm app -- hyprshot -m region --clipboard-only
 
 # toggle notification center
-bind = $mainMod, N, exec, swaync-client -t
+bind = $mainMod, N, exec, uwsm app -- swaync-client -t
 
 # move window to other monitor
 bind = $mainMod, X, movewindow, mon:+1
@@ -318,9 +318,22 @@ bind = $mainMod, X, movewindow, mon:+1
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrule = float on, match:class org.prismlauncher.PrismLauncher
+# disable rounding for windows with "game" content
+windowrule = rounding 0, match:content 3
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+windowrule = suppress_event maximize,match:class .*
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    # Fix some dragging issues with XWayland
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
